--- a/acareader/src/main/webapp/WEB-INF/web.xml
+++ b/acareader/src/main/webapp/WEB-INF/web.xml
@@ -17,6 +17,6 @@
   </servlet>
   <servlet-mapping>
     <servlet-name>UploadController</servlet-name>
-    <url-pattern>/UploadController</url-pattern>
+    <url-pattern>/Upload</url-pattern>
   </servlet-mapping>
 </web-app>
